--- a/Cargo.toml
+++ b/Cargo.toml
@@ -131,6 +131,7 @@ alloy-signer-local = { version = "1.0.3" }
 alloy-rpc-client = { version = "1.0.3" }
 alloy-genesis = { version = "1.0.3" }
 alloy-trie = { version = "0.8.1" }
+alloy-sol-types = { version = "1.2.1" }
 
 # optimism
 alloy-op-evm = { version = "0.8.0", default-features = false }
